# EmbeddedCDesignPatterns

./: CMakeLists.txt  Makefile  NOTES.md
chapter_1/: cached_queue.c  cached_queue.h  queue.c  queue.h  queue_main.c  security_supervisor_dispatcher.c  security_supervisor_fsm.c  sensor.c  sensor.h  sensor_main.c
chapter_2/: ECGPkg.h  ECG_Module.c  ECG_Module.h  ECG_main.c  Histogram_Display.c  Histogram_Display.h  Histogram_Display_Observer.c  NotificationHandle.c  NotificationHandle.h  TMDQueue.c  TMDQueue.h  TMDQueue_Observer.c  TMDQueue_Observer.h  Test_Builder.c  Test_Builder.h
